[gd_scene load_steps=2 format=3 uid="uid://45wprprmp5p4"]

[ext_resource type="Script" path="res://components/componentScripts/story_label.gd" id="1_abvgx"]

[node name="StoryLabel" type="PanelContainer"]
visible = false
top_level = true
clip_children = 1
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_abvgx")

[node name="T" type="Panel" parent="."]
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"StoryPanelDialogue"

[node name="M" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="StoryText" type="RichTextLabel" parent="M"]
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
